# rstream

./: .gitignore  LICENSE  README.md  consumer.py  pyproject.toml  setup.cfg  test.py
.github/workflows/: publish-prerelease.yaml  publish-pypi.yaml  publish-release.yaml  test.yaml
docs/examples/: off.py  super_stream_consumer.py  super_stream_producer.py
docs/examples/basic_consumers/: README.md  basic_consumer.py  basic_consumer_binary.py  basic_consumer_offset_next.py  basic_consumer_offset_offset.py
docs/examples/basic_producers/: README.md  producer_send.py  producer_send_batch.py  producer_send_batch_binary.py  producer_send_binary.py  producer_send_wait.py
docs/examples/check_connection_broken/: README.md  consumer_handle_connections_issues.py  consumer_handle_connections_issues_with_close.py  consumer_handle_connections_issues_with_reconnection.py  producer_handle_connections_issues.py  producer_handle_connections_issues_with_close.py  producer_handle_connections_issues_with_reconnect.py  superstream_consumer_handle_connections_issues.py  superstream_consumer_handle_reconnection.py  superstream_producer_handle_connections_issues.py  superstream_producer_handle_reconnection.py
docs/examples/deduplication/: producer_ded.py
docs/examples/filtering/: README.md  consumer_filtering.py  producer_filtering.py  super_stream_consumer_filtering.py  super_stream_producer_filtering.py
docs/examples/hello_world/: receive.py  send.py
docs/examples/manual_server_offset_tracking/: README.md  consumer.py
docs/examples/metadata_update/: README.md  consumer_for_testing.py  consumer_metadata_disconnection.py  consumer_metadata_update.py  producer_for_testing.py  producer_metadata_disconnection.py  producer_metadata_disconnection_with_backoff.py  producer_metadata_update.py  super_stream_consumer_metadata_update.py  super_stream_producer_metadata_update.py
docs/examples/producers_with_confirmations/: README.md  send_batch_with_confirmation.py  send_with_confirmation.py
docs/examples/reliable_client/: BestPracticesClient.py  README.md  appsettings.json
rstream/: __init__.py  amqp.py  client.py  client.pytmp  compression.py  connection.py  constants.py  consumer.py  encoding.py  exceptions.py  producer.py  producer.pytmp  schema.py  superstream.py  superstream_consumer.py  superstream_producer.py  utils.py
rstream.egg-info/: PKG-INFO  SOURCES.txt
rstream/_pyamqp/: _decode.py  _encode.py  constants.py  error.py  management_operation.py  message.py  performatives.py  types.py
scripts/: startrmq-ha.bash  startrmq.bash
tests/: conftest.py  http_requests.py  test_amqp.py  test_client.py  test_consumer.py  test_consumer.pytmp  test_encoding.py  test_producer.py  test_producer.pytmp  tmp  util.py
(+13 files in other folders)
