[tool.poetry]
name = "rstream"
version = "0.14.1"
description = "A python client for RabbitMQ Streams"
authors = ["George Fortunatov <qweeeze@gmail.com>", "Daniele Palaia <dpalaia@vmware.com>"]
readme = "README.md"
homepage = "https://github.com/qweeze/rstream"
repository = "https://github.com/qweeze/rstream"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
uamqp = "^1.6.3"
requests = "^2.31.0"
mmh3 = "^4.0.0"

[tool.poetry.dev-dependencies]
ipython = "^7.13.0"
flake8 = "^3.9.2"
isort = "^5.9.3"
mypy = "^0.910"
pytest = "^7.4.0"
pytest-asyncio = "^0.15.1"
black = "^21.9b0"
requests = "^2.31.0"
mmh3 = "^4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[tool.black]
line-length = 110

[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "local_tests.*"
ignore_errors = true
